# vsc_cpp_project_template

./: CMakeLists.txt
src/: main.cpp
